antlr-generated/com/galaxyx/galaxyxparser/GalaxyXParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g 2013-03-10 17:59:41

	package com.galaxyx.galaxyxparser;
	import com.galaxyx.galaxyxparser.typechecking.*;
	import com.galaxyx.galaxyxparser.typechecking.Error;
	import com.galaxyx.galaxyxparser.structures.*;
	import com.galaxyx.galaxyxparser.structures.Class;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

/**********************************************
 * GalaxyX Grammar
 * Copyright (c) Timo Hanisch 2013
 * timohanisch@gmail.com
 *
 * Namespaces/Classes/Methods/Global Vars get
 * registered here!
 **********************************************/
public class GalaxyXParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "TYPEDEF", "IDENTIFIER", "SEMI", "NAMESPACE", "COLON", "END", "INITIALIZER", "STATIC", "FUNC", "LPAREN", "RPAREN", "RETURNS", "COMMA", "CLASS", "LBRACK", "INTEGER", "RBRACK", "EXTENDS", "CONSTRUCTOR", "DESTRUCTOR", "PUBLIC", "PRIVATE", "ASSGN", "CONST", "ASSGNP", "ASSGNS", "ASSGNT", "ASSGND", "ASSGNM", "ASSGNSHL", "ASSGNSHR", "ASSGNBITAND", "ASSGNBITOR", "ASSGNBITXOR", "NAMESPACE_ACCESS", "BOOLEAN", "BYTE", "CHAR", "FIXED", "GAMELINK", "COLOR", "INT", "POINT", "STRING", "ABILCMD", "ACTOR", "ACTORSCOPE", "BANK", "CAMERAINFO", "MARKER", "ORDER", "PLAYERGROUP", "REGION", "REVEALER", "SOUNDLINK", "TEXT", "TIMER", "TRANSMISSIONSOURCE", "TRIGGER", "UNITFILTER", "UNITGROUP", "UNITREF", "UNIT", "WAVEINFO", "WAVETARGET", "DOODAD", "AIFILTER", "SOUND", "WAVE", "VOID", "PLUS", "SUB", "TIMES", "DIV", "MODULO", "DOT", "NOT", "NEW", "DELETE", "BIT_NOT", "CHARACTER_LITERAL", "STRING_LITERAL", "FIXED_LITERAL", "TRUE", "FALSE", "NULL", "THIS", "LOR", "LAND", "OR", "XOR", "AND", "EQ", "NEQ", "LT", "GT", "LTEQ", "GTEQ", "SHIFTL", "SHIFTR", "IF", "ELIF", "ELSE", "WHILE", "FOR", "BREAK", "CONTINUE", "RETURN", "INLINE", "NATIVE", "STRUCT", "INTERFACE", "IMPLEMENTS", "SUPER", "NAMEOF", "DEFINE", "LBRACE", "RBRACE", "PREFIX", "LETTER", "EscapeSequence", "DIGIT", "HEX_LITERAL", "HexDigit", "Exponent", "FloatTypeSuffix", "OctalEscape", "UnicodeEscape", "WS", "LINE_COMMENT", "MULTI_COMMENT"
    };
    public static final int EOF=-1;
    public static final int NEGATION=4;
    public static final int TYPEDEF=5;
    public static final int IDENTIFIER=6;
    public static final int SEMI=7;
    public static final int NAMESPACE=8;
    public static final int COLON=9;
    public static final int END=10;
    public static final int INITIALIZER=11;
    public static final int STATIC=12;
    public static final int FUNC=13;
    public static final int LPAREN=14;
    public static final int RPAREN=15;
    public static final int RETURNS=16;
    public static final int COMMA=17;
    public static final int CLASS=18;
    public static final int LBRACK=19;
    public static final int INTEGER=20;
    public static final int RBRACK=21;
    public static final int EXTENDS=22;
    public static final int CONSTRUCTOR=23;
    public static final int DESTRUCTOR=24;
    public static final int PUBLIC=25;
    public static final int PRIVATE=26;
    public static final int ASSGN=27;
    public static final int CONST=28;
    public static final int ASSGNP=29;
    public static final int ASSGNS=30;
    public static final int ASSGNT=31;
    public static final int ASSGND=32;
    public static final int ASSGNM=33;
    public static final int ASSGNSHL=34;
    public static final int ASSGNSHR=35;
    public static final int ASSGNBITAND=36;
    public static final int ASSGNBITOR=37;
    public static final int ASSGNBITXOR=38;
    public static final int NAMESPACE_ACCESS=39;
    public static final int BOOLEAN=40;
    public static final int BYTE=41;
    public static final int CHAR=42;
    public static final int FIXED=43;
    public static final int GAMELINK=44;
    public static final int COLOR=45;
    public static final int INT=46;
    public static final int POINT=47;
    public static final int STRING=48;
    public static final int ABILCMD=49;
    public static final int ACTOR=50;
    public static final int ACTORSCOPE=51;
    public static final int BANK=52;
    public static final int CAMERAINFO=53;
    public static final int MARKER=54;
    public static final int ORDER=55;
    public static final int PLAYERGROUP=56;
    public static final int REGION=57;
    public static final int REVEALER=58;
    public static final int SOUNDLINK=59;
    public static final int TEXT=60;
    public static final int TIMER=61;
    public static final int TRANSMISSIONSOURCE=62;
    public static final int TRIGGER=63;
    public static final int UNITFILTER=64;
    public static final int UNITGROUP=65;
    public static final int UNITREF=66;
    public static final int UNIT=67;
    public static final int WAVEINFO=68;
    public static final int WAVETARGET=69;
    public static final int DOODAD=70;
    public static final int AIFILTER=71;
    public static final int SOUND=72;
    public static final int WAVE=73;
    public static final int VOID=74;
    public static final int PLUS=75;
    public static final int SUB=76;
    public static final int TIMES=77;
    public static final int DIV=78;
    public static final int MODULO=79;
    public static final int DOT=80;
    public static final int NOT=81;
    public static final int NEW=82;
    public static final int DELETE=83;
    public static final int BIT_NOT=84;
    public static final int CHARACTER_LITERAL=85;
    public static final int STRING_LITERAL=86;
    public static final int FIXED_LITERAL=87;
    public static final int TRUE=88;
    public static final int FALSE=89;
    public static final int NULL=90;
    public static final int THIS=91;
    public static final int LOR=92;
    public static final int LAND=93;
    public static final int OR=94;
    public static final int XOR=95;
    public static final int AND=96;
    public static final int EQ=97;
    public static final int NEQ=98;
    public static final int LT=99;
    public static final int GT=100;
    public static final int LTEQ=101;
    public static final int GTEQ=102;
    public static final int SHIFTL=103;
    public static final int SHIFTR=104;
    public static final int IF=105;
    public static final int ELIF=106;
    public static final int ELSE=107;
    public static final int WHILE=108;
    public static final int FOR=109;
    public static final int BREAK=110;
    public static final int CONTINUE=111;
    public static final int RETURN=112;
    public static final int INLINE=113;
    public static final int NATIVE=114;
    public static final int STRUCT=115;
    public static final int INTERFACE=116;
    public static final int IMPLEMENTS=117;
    public static final int SUPER=118;
    public static final int NAMEOF=119;
    public static final int DEFINE=120;
    public static final int LBRACE=121;
    public static final int RBRACE=122;
    public static final int PREFIX=123;
    public static final int LETTER=124;
    public static final int EscapeSequence=125;
    public static final int DIGIT=126;
    public static final int HEX_LITERAL=127;
    public static final int HexDigit=128;
    public static final int Exponent=129;
    public static final int FloatTypeSuffix=130;
    public static final int OctalEscape=131;
    public static final int UnicodeEscape=132;
    public static final int WS=133;
    public static final int LINE_COMMENT=134;
    public static final int MULTI_COMMENT=135;

    // delegates
    // delegators


        public GalaxyXParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public GalaxyXParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
            this.state.ruleMemo = new HashMap[180+1];
             
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return GalaxyXParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g"; }


    	private Namespace namespace = null;
    	private Class cl = null;
    	private Method method = null; 
    	
    	@Override 
    	public void displayRecognitionError(String[] tokenNames,
                                            RecognitionException e) {
            String hdr = getErrorHeader(e);
            String msg = getErrorMessage(e, tokenNames);
            Error.printError(hdr + msg);
        }


    public static class translation_unit_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "translation_unit"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:48:1: translation_unit : ( namespace )* ;
    public final GalaxyXParser.translation_unit_return translation_unit() throws RecognitionException {
        GalaxyXParser.translation_unit_return retval = new GalaxyXParser.translation_unit_return();
        retval.start = input.LT(1);
        int translation_unit_StartIndex = input.index();
        CommonTree root_0 = null;

        GalaxyXParser.namespace_return namespace1 = null;



        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:49:2: ( ( namespace )* )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:49:4: ( namespace )*
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:49:4: ( namespace )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==NAMESPACE) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:0:0: namespace
            	    {
            	    pushFollow(FOLLOW_namespace_in_translation_unit95);
            	    namespace1=namespace();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, namespace1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 1, translation_unit_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "translation_unit"

    public static class typedef_decl_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "typedef_decl"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:52:1: typedef_decl : ( modifier )? TYPEDEF type IDENTIFIER SEMI ;
    public final GalaxyXParser.typedef_decl_return typedef_decl() throws RecognitionException {
        GalaxyXParser.typedef_decl_return retval = new GalaxyXParser.typedef_decl_return();
        retval.start = input.LT(1);
        int typedef_decl_StartIndex = input.index();
        CommonTree root_0 = null;

        Token TYPEDEF3=null;
        Token IDENTIFIER5=null;
        Token SEMI6=null;
        GalaxyXParser.modifier_return modifier2 = null;

        GalaxyXParser.type_return type4 = null;


        CommonTree TYPEDEF3_tree=null;
        CommonTree IDENTIFIER5_tree=null;
        CommonTree SEMI6_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:53:2: ( ( modifier )? TYPEDEF type IDENTIFIER SEMI )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:53:4: ( modifier )? TYPEDEF type IDENTIFIER SEMI
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:53:4: ( modifier )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( ((LA2_0>=PUBLIC && LA2_0<=PRIVATE)) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:0:0: modifier
                    {
                    pushFollow(FOLLOW_modifier_in_typedef_decl108);
                    modifier2=modifier();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, modifier2.getTree());

                    }
                    break;

            }

            TYPEDEF3=(Token)match(input,TYPEDEF,FOLLOW_TYPEDEF_in_typedef_decl111); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            TYPEDEF3_tree = (CommonTree)adaptor.create(TYPEDEF3);
            root_0 = (CommonTree)adaptor.becomeRoot(TYPEDEF3_tree, root_0);
            }
            pushFollow(FOLLOW_type_in_typedef_decl114);
            type4=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, type4.getTree());
            IDENTIFIER5=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_typedef_decl116); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENTIFIER5_tree = (CommonTree)adaptor.create(IDENTIFIER5);
            adaptor.addChild(root_0, IDENTIFIER5_tree);
            }
            SEMI6=(Token)match(input,SEMI,FOLLOW_SEMI_in_typedef_decl118); if (state.failed) return retval;

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
            if ( state.backtracking>0 ) { memoize(input, 2, typedef_decl_StartIndex); }
        }
        return retval;
    }
    // $ANTLR end "typedef_decl"

    public static class namespace_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "namespace"
    // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:58:1: namespace : NAMESPACE i1= IDENTIFIER COLON ( initializer )? ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE ;
    public final GalaxyXParser.namespace_return namespace() throws RecognitionException {
        GalaxyXParser.namespace_return retval = new GalaxyXParser.namespace_return();
        retval.start = input.LT(1);
        int namespace_StartIndex = input.index();
        CommonTree root_0 = null;

        Token i1=null;
        Token NAMESPACE7=null;
        Token COLON8=null;
        Token END14=null;
        Token NAMESPACE15=null;
        GalaxyXParser.initializer_return initializer9 = null;

        GalaxyXParser.function_return function10 = null;

        GalaxyXParser.class_decl_return class_decl11 = null;

        GalaxyXParser.field_decl_return field_decl12 = null;

        GalaxyXParser.typedef_decl_return typedef_decl13 = null;


        CommonTree i1_tree=null;
        CommonTree NAMESPACE7_tree=null;
        CommonTree COLON8_tree=null;
        CommonTree END14_tree=null;
        CommonTree NAMESPACE15_tree=null;

        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:59:2: ( NAMESPACE i1= IDENTIFIER COLON ( initializer )? ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE )
            // C:\\Users\\Timo\\EclipseProjects\\GalaxyX\\src\\com\\galaxyx\\galaxyxparser\\GalaxyX.g:59:4: NAMESPACE i1= IDENTIFIER COLON ( initializer )? ( function | class_decl | field_decl | typedef_decl )* END NAMESPACE
            {
            root_0 = (CommonTree)adaptor.nil();

            NAMESPACE7=(Token)match(input,NAMESPACE,FOLLOW_NAMESPACE_in_namespace135); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            NAMESPACE7_tree = (CommonTree)adaptor.create(NAMESPACE7);
            root_0 = (CommonTree)adaptor.becomeRoot(NAMESPACE7_tree, root_0);
            }
            i1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_namespace140); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            i1_tree = (CommonTree)adaptor.create(i1);
            adaptor.addChild(root_0, i1_tree);
            }
            COLON8=(Token)match(input,COLON,FOLLOW_COLON_in_namespace142); if (state.failed) return retval;
            if ( state.backtracking==0 ) {

              		if(Main.table.namespaceExists(i1.getText())){
              			namespace = Main.table.getNamespace((i1!=null?i1.getText():null));
              		}else{
              			namespace = new Namespace((i1!=null?i1.getText():null));
              			Main.table.putNamespace((i1!=null?i1.getText():null),namespace);
              		}
              	
            }
